<resources>
    <string name="app_name">Weather_standalone</string>
    <string name="weather_app">Weather App</string>
    <string name="climatic">Climatic</string>
    <string name="weather_icon">Weather_icon</string>
    <string name="mostly_clear">Mostly Clear</string>
    <string name="_12">12°</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="get_weather">Get weather</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="search_for_a_city">search for a city</string>
    <string name="city">City</string>
</resources>